Finish freeConsult section

--- a/src/index.html
+++ b/src/index.html
@@ -147,5 +147,46 @@
             </div>
         </div>
     </div>
+
+    <div class="freeConsult">
+        <div class="container">
+            <h2 class="freeConsult__title title title_fz42">
+                Бесплатная консультация врача
+            </h2>
+            <h3 class="freeConsult__descr title title_fz28">
+                На бесплатной консультации врач клиники проведет диагностику всех зубов:
+            </h3>
+            <div class="freeConsult__wrapper">
+                <div class="freeConsult__item">
+                    <img src="img/freeConsult/diagnostics.jpg" alt="diagnostics" class="freeConsult__item_img">
+                    <div class="freeConsult__item_title">
+                        Полный осмотр и диагностика полости рта
+                    </div>
+                    <div class="freeConsult__item_descr">
+                        При необходимости сделаем дополнительный снимок зубов, у нас в клинике
+                    </div>
+                </div>
+                <div class="freeConsult__item">
+                    <img src="img/freeConsult/plan.jpg" alt="plan" class="freeConsult__item_img">
+                    <div class="freeConsult__item_title">
+                        Составит 2-3 плана лечения на выбор
+                    </div>
+                    <div class="freeConsult__item_descr">
+                        Вы сможете выбрать подходящий план лечения, исходя из бюджета
+                    </div>
+                </div>
+                <div class="freeConsult__item">
+                    <img src="img/freeConsult/cleaning.jpg" alt="cleaning" class="freeConsult__item_img">
+                    <div class="freeConsult__item_title">
+                        При необходимости проведем проф. гигиену
+                    </div>
+                    <div class="freeConsult__item_descr">
+                        Чистка зубов в 4 этапа
+                    </div>
+                </div>
+            </div>
+            <button class="freeConsult__btn">Записаться</button>
+        </div>
+    </div>
 </body>
 </html>
