--- a/src/index.html
+++ b/src/index.html
@@ -195,7 +195,7 @@
             <h2 class="promotions__title title title_fz42">
                 Акции
             </h2>
-            <div class="promotions__descr">
+            <div class="promotions__descr title title_fz28">
                 Для подписчиков группы VK стоматологической клиники "Семейный доктор" <span>действуют акции и специальные предложения</span>
             </div>
             <div class="slider"> 
@@ -231,6 +231,175 @@
                     </div>
                 </div>
                 <ul class="slider__nav"></ul>
+            </div>
+        </div>
+    </div>
+
+    <div class="service">
+        <div class="container">
+            <h2 class="service__title title title_fz42">
+                Услуги
+            </h2>
+            <div class="service__descr title title_fz28">
+                Наша клиника предоставляет широкий спектр услуг, выберите подходящую вам и 
+                <span>запишитесь на бесплатную консультацию</span> 
+            </div>
+            <div class="service__wrapper">
+                <div class="service__item">
+                    <img class="service__item_img" src="img/service/surgery.png" alt="surgery">
+                    <div class="service__item_title title title_fz28">
+                        Хирургия
+                    </div>
+                    <div class="service__item_descr">
+                        Удаление зуба является одной из самых распространенных операций в стоматологической практике.
+                    </div>
+                    <ul class="service__item_list">
+                        <li>Удаление зубов любой сложности</li>
+                    </ul>
+                    <div class="service__item_contacts">
+                        <div class="messengers">
+                            <img src="icons/telegram.svg" alt="telegram">
+                            <img src="icons/whatsApp.svg" alt="whatsApp">
+                        </div>
+                        <div>спросить в мессенджере</div>
+                    </div>
+                    <div class="service__item_btns">
+                        <button class="service__item_btns_signUp">Записаться</button>
+                        <button class="service__item_btns_price">Узнать цены</button>
+                    </div>
+                </div>
+
+
+                <div class="service__item">
+                    <img class="service__item_img" src="img/service/therapy.png" alt="therapy">
+                    <div class="service__item_title title title_fz28">
+                        Терапия
+                    </div>
+                    <div class="service__item_descr">
+                        Лечение напрямую зависит от стадии заболевания. Мы подбираем наиболее эффективные методы диагностики и терапии.
+                    </div>
+                    <ul class="service__item_list">
+                        <li>Кариозных и некариозных поражений</li>
+                        <li>Пульпитов и периодонтитов</li>
+                        <li>Художественная реставрация зубов</li>
+                    </ul>
+                    <div class="service__item_contacts">
+                        <div class="messengers">
+                            <img src="icons/telegram.svg" alt="telegram">
+                            <img src="icons/whatsApp.svg" alt="whatsApp">
+                        </div>
+                        <div>спросить в мессенджере</div>
+                    </div>
+                    <div class="service__item_btns">
+                        <button class="service__item_btns_signUp">Записаться</button>
+                        <button class="service__item_btns_price">Узнать цены</button>
+                    </div>
+                </div>
+
+                <div class="service__item">
+                    <img class="service__item_img" src="img/service/orthopedics.png" alt="orthopedics">
+                    <div class="service__item_title title title_fz28">
+                        Ортопедия
+                    </div>
+                    <div class="service__item_descr">
+                        Помогает решить проблемы, связанные с аномалиями, приобретенными дефектами, повреждениями и деформациями органов жевательно-речевого аппарата.
+                    </div>
+                    <ul class="service__item_list">
+                        <li>Коронки и мосты керамические</li>
+                        <li>Коронки и мосты циркониевые</li>
+                        <li>Съёмное протезирование (протезы, бюгеля, мягкие протезы)</li>
+                        <li>Установка виниров</li>
+                    </ul>
+                    <div class="service__item_contacts">
+                        <div class="messengers">
+                            <img src="icons/telegram.svg" alt="telegram">
+                            <img src="icons/whatsApp.svg" alt="whatsApp">
+                        </div>
+                        <div>спросить в мессенджере</div>
+                    </div>
+                    <div class="service__item_btns">
+                        <button class="service__item_btns_signUp">Записаться</button>
+                        <button class="service__item_btns_price">Узнать цены</button>
+                    </div>
+                </div>
+
+                <div class="service__item">
+                    <img class="service__item_img" src="img/service/implantation.png" alt="implantation">
+                    <div class="service__item_title title title_fz28">
+                        Имплантация
+                    </div>
+                    <div class="service__item_descr">
+                        Это операция по установке в челюстную ткань специального стоматологического штифта, который будет играть роль корня.
+                    </div>
+                    <ul class="service__item_list">
+                        <li>Установка имплантов OSSTEM implant</li>
+                        <li>Наращивание кости (все виды аугментации) OSSTEM implant</li>
+                        <li>Имплантация зубов по системе All ON4-All ON6</li>
+                    </ul>
+                    <div class="service__item_contacts">
+                        <div class="messengers">
+                            <img src="icons/telegram.svg" alt="telegram">
+                            <img src="icons/whatsApp.svg" alt="whatsApp">
+                        </div>
+                        <div>спросить в мессенджере</div>
+                    </div>
+                    <div class="service__item_btns">
+                        <button class="service__item_btns_signUp">Записаться</button>
+                        <button class="service__item_btns_price">Узнать цены</button>
+                    </div>
+                </div>
+
+
+                <div class="service__item">
+                    <img class="service__item_img" src="img/service/orthopedics_2.png" alt="orthopedics_2">
+                    <div class="service__item_title title title_fz28">
+                        Ортодонтия
+                    </div>
+                    <div class="service__item_descr">
+                        Поможет сделать вашу улыбку красивой и исправит прикус. Исправляет аномалии челюстей, положения челюстей в черепе, формы, величины, соотношения зубных дуг.
+                    </div>
+                    <ul class="service__item_list">
+                        <li>Установка брекет систем</li>
+                        <li>Цифровое ортодонтическое лечение прозрачными каппами</li>
+                        <li>Полная диагностика и лечение взрослых и детей</li>
+                    </ul>
+                    <div class="service__item_contacts">
+                        <div class="messengers">
+                            <img src="icons/telegram.svg" alt="telegram">
+                            <img src="icons/whatsApp.svg" alt="whatsApp">
+                        </div>
+                        <div>спросить в мессенджере</div>
+                    </div>
+                    <div class="service__item_btns">
+                        <button class="service__item_btns_signUp">Записаться</button>
+                        <button class="service__item_btns_price">Узнать цены</button>
+                    </div>
+                </div>
+
+
+                <div class="service__item">
+                    <img class="service__item_img" src="img/service/whitening.png" alt="whitening">
+                    <div class="service__item_title title title_fz28">
+                        Отбеливание зубов
+                    </div>
+                    <div class="service__item_descr">
+                        Стоматологическая процедура изменения оттенка зубной эмали. Отбеливание зубов относится к области косметической стоматологии.
+                    </div>
+                    <ul class="service__item_list">
+                        <li>Система Opalescence Boost</li>
+                    </ul>
+                    <div class="service__item_contacts">
+                        <div class="messengers">
+                            <img src="icons/telegram.svg" alt="telegram">
+                            <img src="icons/whatsApp.svg" alt="whatsApp">
+                        </div>
+                        <div>спросить в мессенджере</div>
+                    </div>
+                    <div class="service__item_btns">
+                        <button class="service__item_btns_signUp">Записаться</button>
+                        <button class="service__item_btns_price">Узнать цены</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
