--- a/src/index.html
+++ b/src/index.html
@@ -104,7 +104,7 @@
             <div class="promo__text">
                 Запишитесь на <span>бесплатную</span> первичную консультацию - диагностику зубов
             </div>
-            <button class="promo__btn">Записаться</button>
+            <button class="signUpBtn btn btn_withoutBorder">Записаться</button>
             <div class="promo__wrapper">
                 <div class="promo__item">
                     <div class="promo__item_img">
@@ -186,7 +186,7 @@
                     </div>
                 </div>
             </div>
-            <button class="freeConsult__btn">Записаться</button>
+            <button class="signUpBtn btn btn_withoutBorder">Записаться</button>
         </div>
     </div>
 
@@ -256,7 +256,7 @@
                     <ul class="service__item_list">
                         <li>Удаление зубов любой сложности</li>
                     </ul>
-                    <div class="service__item_contacts">
+                    <div class="contacts">
                         <div class="messengers">
                             <img src="icons/telegram.svg" alt="telegram">
                             <img src="icons/whatsApp.svg" alt="whatsApp">
@@ -264,8 +264,8 @@
                         <div>спросить в мессенджере</div>
                     </div>
                     <div class="service__item_btns">
-                        <button class="service__item_btns_signUp">Записаться</button>
-                        <button class="service__item_btns_price">Узнать цены</button>
+                        <button class="signUpBtn btn">Записаться</button>
+                        <button class="priceBtn btn">Узнать цены</button>
                     </div>
                 </div>
 
@@ -283,7 +283,7 @@
                         <li>Пульпитов и периодонтитов</li>
                         <li>Художественная реставрация зубов</li>
                     </ul>
-                    <div class="service__item_contacts">
+                    <div class="contacts">
                         <div class="messengers">
                             <img src="icons/telegram.svg" alt="telegram">
                             <img src="icons/whatsApp.svg" alt="whatsApp">
@@ -291,8 +291,8 @@
                         <div>спросить в мессенджере</div>
                     </div>
                     <div class="service__item_btns">
-                        <button class="service__item_btns_signUp">Записаться</button>
-                        <button class="service__item_btns_price">Узнать цены</button>
+                        <button class="signUpBtn btn">Записаться</button>
+                        <button class="priceBtn btn">Узнать цены</button>
                     </div>
                 </div>
 
@@ -310,7 +310,7 @@
                         <li>Съёмное протезирование (протезы, бюгеля, мягкие протезы)</li>
                         <li>Установка виниров</li>
                     </ul>
-                    <div class="service__item_contacts">
+                    <div class="contacts">
                         <div class="messengers">
                             <img src="icons/telegram.svg" alt="telegram">
                             <img src="icons/whatsApp.svg" alt="whatsApp">
@@ -318,8 +318,8 @@
                         <div>спросить в мессенджере</div>
                     </div>
                     <div class="service__item_btns">
-                        <button class="service__item_btns_signUp">Записаться</button>
-                        <button class="service__item_btns_price">Узнать цены</button>
+                        <button class="signUpBtn btn">Записаться</button>
+                        <button class="priceBtn btn">Узнать цены</button>
                     </div>
                 </div>
 
@@ -336,7 +336,7 @@
                         <li>Наращивание кости (все виды аугментации) OSSTEM implant</li>
                         <li>Имплантация зубов по системе All ON4-All ON6</li>
                     </ul>
-                    <div class="service__item_contacts">
+                    <div class="contacts">
                         <div class="messengers">
                             <img src="icons/telegram.svg" alt="telegram">
                             <img src="icons/whatsApp.svg" alt="whatsApp">
@@ -344,8 +344,8 @@
                         <div>спросить в мессенджере</div>
                     </div>
                     <div class="service__item_btns">
-                        <button class="service__item_btns_signUp">Записаться</button>
-                        <button class="service__item_btns_price">Узнать цены</button>
+                        <button class="signUpBtn btn">Записаться</button>
+                        <button class="priceBtn btn">Узнать цены</button>
                     </div>
                 </div>
 
@@ -363,7 +363,7 @@
                         <li>Цифровое ортодонтическое лечение прозрачными каппами</li>
                         <li>Полная диагностика и лечение взрослых и детей</li>
                     </ul>
-                    <div class="service__item_contacts">
+                    <div class="contacts">
                         <div class="messengers">
                             <img src="icons/telegram.svg" alt="telegram">
                             <img src="icons/whatsApp.svg" alt="whatsApp">
@@ -371,8 +371,8 @@
                         <div>спросить в мессенджере</div>
                     </div>
                     <div class="service__item_btns">
-                        <button class="service__item_btns_signUp">Записаться</button>
-                        <button class="service__item_btns_price">Узнать цены</button>
+                        <button class="signUpBtn btn">Записаться</button>
+                        <button class="priceBtn btn">Узнать цены</button>
                     </div>
                 </div>
 
@@ -388,7 +388,7 @@
                     <ul class="service__item_list">
                         <li>Система Opalescence Boost</li>
                     </ul>
-                    <div class="service__item_contacts">
+                    <div class="contacts">
                         <div class="messengers">
                             <img src="icons/telegram.svg" alt="telegram">
                             <img src="icons/whatsApp.svg" alt="whatsApp">
@@ -396,8 +396,65 @@
                         <div>спросить в мессенджере</div>
                     </div>
                     <div class="service__item_btns">
-                        <button class="service__item_btns_signUp">Записаться</button>
-                        <button class="service__item_btns_price">Узнать цены</button>
+                        <button class="signUpBtn btn">Записаться</button>
+                        <button class="priceBtn btn">Узнать цены</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="hygiene">
+        <div class="container">
+            <div class="hygiene__wrapper">
+                <div class="hygiene__item">
+                    <h2 class="hygiene__title title title_fz28">
+                        Технология профессиональной гигиены полости рта <span>в 4 этапа</span> 
+                    </h2>
+                    <div class="hygiene__descr">
+                        Посмотрите видео о технологии
+                    </div>
+                    <!-- <iframe width="550" height="305" src="https://www.youtube.com/embed/6lbZnBIkQ4Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
+                    <button class="priceBtn btn">Узнать цены</button>
+                </div>
+                <div class="hygiene__item">
+                    <ul class="hygiene__list">
+                        <li>Максимальная чистка в труднодоступных местах от камня и налета</li>
+                        <li>Применение AIR FLOW не доставляет дискомфорта и боли</li>
+                        <li>Такая чистка помогает убрать неприятный запах изо рта</li>
+                        <li>Осветляет зубы на 2-3 тона</li>
+                        <li>Очищает протезы брекеты и другие ортодонтические конструкции</li>
+                        <li>Убирает пятна от кофе, чая, табака и красного вина</li>
+                        <li>Удаляет налет курильщика</li>
+                        <li>Снижается развитие кариозного процесса</li>
+                        <li>Все этапы безболезнены и атравматичны</li>
+                    </ul>
+                </div>
+                <div class="hygiene__item">
+                    <div class="hygiene__blocks">
+                        <div class="hygiene__block">
+                            Ультразвуковым аппаратом производится максимальная чистка в труднодоступных местах от поддесневого и наддесневого камня и налета.
+                        </div>
+                        <div class="hygiene__block">
+                            Применение AIR FLOW не доставляет дискомфорта и боли, очищая межзубные отложения. 
+                        </div>
+                        <div class="hygiene__block">
+                            Полировка зубов при помощи специальных паст и щеточек. Такая чистка устраняет все неровности скопившихся отложений, освежает и убирает неприятный запах.
+                        </div>
+                        <div class="hygiene__block">
+                            Покрытие зубов ременилизирующим гелем. Снимает чувствительность, предотвращает развитие кариеса. 
+                        </div>
+                    </div>
+                    <div class="contacts">
+                        <div class="messengers">
+                            <img src="icons/telegram.svg" alt="telegram">
+                            <img src="icons/whatsApp.svg" alt="whatsApp">
+                        </div>
+                        <div>спросить в мессенджере</div>
+                    </div>
+                    <div class="hygiene__btns">
+                        <button class="signUpBtn btn">Записаться</button>
+                        <button class="chooseDoctorBtn btn">Выбрать врача</button>
                     </div>
                 </div>
             </div>
