Finish helper section

--- a/src/index.html
+++ b/src/index.html
@@ -104,7 +104,7 @@
             <div class="promo__text">
                 Запишитесь на <span>бесплатную</span> первичную консультацию - диагностику зубов
             </div>
-            <button class="signUpBtn btn btn_withoutBorder">Записаться</button>
+            <button class="signUpBtn btn btn_colorBtn">Записаться</button>
             <div class="promo__wrapper">
                 <div class="promo__item">
                     <div class="promo__item_img">
@@ -151,7 +151,7 @@
 
     <div class="freeConsult">
         <div class="container">
-            <h2 class="freeConsult__title title title_fz42">
+            <h2 class="title title_fz42">
                 Бесплатная консультация врача
             </h2>
             <h3 class="freeConsult__descr title title_fz28">
@@ -186,13 +186,13 @@
                     </div>
                 </div>
             </div>
-            <button class="signUpBtn btn btn_withoutBorder">Записаться</button>
+            <button class="signUpBtn btn btn_colorBtn">Записаться</button>
         </div>
     </div>
 
     <div class="promotions">
         <div class="container">
-            <h2 class="promotions__title title title_fz42">
+            <h2 class="title title_fz42">
                 Акции
             </h2>
             <div class="promotions__descr title title_fz28">
@@ -237,7 +237,7 @@
 
     <div class="service">
         <div class="container">
-            <h2 class="service__title title title_fz42">
+            <h2 class="title title_fz42">
                 Услуги
             </h2>
             <div class="service__descr title title_fz28">
@@ -351,7 +351,7 @@
 
 
                 <div class="service__item">
-                    <img class="service__item_img" src="img/service/orthopedics_2.png" alt="orthopedics_2">
+                    <img class="service__item_img" src="img/service/orthodontics.png" alt="orthodontics">
                     <div class="service__item_title title title_fz28">
                         Ортодонтия
                     </div>
@@ -454,7 +454,183 @@
                     </div>
                     <div class="hygiene__btns">
                         <button class="signUpBtn btn">Записаться</button>
-                        <button class="chooseDoctorBtn btn">Выбрать врача</button>
+                        <button class="chooseDoctorBtn btn btn_colorBtn">Выбрать врача</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="doctors">
+        <div class="container">
+            <h2 class="title title_fz42">Врачи</h2>
+            <div class="doctors__descr title title_fz28">В нашей клинике работают высококлассные специалисты с большим опытом работы. Выберите подходящего врача и запишитесь на  консультацию.</div>
+
+            <div class="slider"> 
+                <div class="slider__wrapper">
+                    <div>
+                        <div class="slider__slide">
+                            <div class="slider__slide_name">Саидов Шамсулло Нарзуллоевич</div>
+                            <div class="slider__slide_speciality">Врач-стоматолог <span>Ведущий специалист</span></div>
+                            <div class="slider__slide_descr">
+                                <h3>Опыт работы более 25 лет</h3>
+                                <span>Действующие сертификаты:</span> стоматология ортопедическая; стоматология хирургическая <span>Все виды высококачественного протезирования:</span> съемные, несъемные, безметалловые конструкции, цирконий, протезирование на имплантах, драгметаллах, вкладки, виниры, гнатология и хирургия
+                            </div>
+                            <img src="img/doctors/doctor_1.png" alt="doctor_1">
+                        </div>
+                    </div>
+                    <div>
+                        <div class="slider__slide">
+                            <div class="slider__slide_name">Анисимов Дмитрий Владимирович</div>
+                            <div class="slider__slide_speciality">Врач-стоматолог</div>
+                            <div class="slider__slide_descr">
+                                <h3>Опыт работы более 5 лет</h3>
+                                <span>Действующие сертификаты:</span> стоматология общей практики;
+                                стоматология хирургическая <span>Направленность:</span> имплантация, пародонтология, удаление зубов любой сложности
+                            </div>
+                            <img src="img/doctors/doctor_2.png" alt="doctor_2">
+                        </div>
+                    </div>
+                    <div>
+                        <div class="slider__slide">
+                            <div class="slider__slide_name">Варданян Давид Араевич</div>
+                            <div class="slider__slide_speciality">Врач-стоматолог</div>
+                            <div class="slider__slide_descr">
+                                <h3>Опыт работы более 5 лет</h3>
+                                <span>Действующие сертификаты:</span> стоматология общей практики;
+                                стоматология хирургическая <span>Направленность:</span> протезирование зубов, хирургическое удаление, терапевтическое лечение и отбеливание
+                            </div>
+                            <img src="img/doctors/doctor_3.png" alt="doctor_3">
+                        </div>
+                    </div>
+                    <div>
+                        <div class="slider__slide">
+                            <div class="slider__slide_name">Соха Анастасия Юрьевна</div>
+                            <div class="slider__slide_speciality">Врач-стоматолог</div>
+                            <div class="slider__slide_descr">
+                                <h3>Опыт работы более 10 лет</h3>
+                                <span>Действующие сертификаты:</span> стоматология общей практики;
+                                стоматология терапевтическая; стоматология ортодонтическая <span>Направленность:</span> терапевтическое лечение, эстетическая реставрация зубов и исправление прикуса любой сложности
+                            </div>
+                            <img src="img/doctors/doctor_4.png" alt="doctor_4">
+                        </div>
+                    </div>
+                    <div>
+                        <div class="slider__slide">
+                            <div class="slider__slide_name">Иванова Оксана Григорьевна</div>
+                            <div class="slider__slide_speciality">Врач-стоматолог</div>
+                            <div class="slider__slide_descr">
+                                <h3>Опыт работы более 20 лет</h3>
+                                <span>Действующие сертификаты:</span> стоматология общей практики;
+                                стоматология ортопедическая <span>Направленность:</span> терапевтическое лечение, все виды протезирования, хирургическое удаление зубов
+                            </div>
+                            <img src="img/doctors/doctor_5.png" alt="doctor_5">
+                        </div>
+                    </div>
+                    <div>
+                        <div class="slider__slide">
+                            <div class="slider__slide_name">Синельщикова Елена Дмитриевна</div>
+                            <div class="slider__slide_speciality">Врач-стоматолог</div>
+                            <div class="slider__slide_descr">
+                                <h3>Опыт работы более 5 лет</h3>
+                                <span>Действующие сертификаты:</span> стоматология общей практики;
+                                стоматология хирургическая <span>Направленность:</span> терапевтическое лечение, эстетическая реставрация, хирургическое удаление зубов , профессиональная гигиена и отбеливание
+                            </div>
+                            <img src="img/doctors/doctor_6.png" alt="doctor_6">
+                        </div>
+                    </div>
+                </div> 
+                <div class="slider__controls">
+                    <div class="slider__controls_prevBtn">
+                        <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="20" cy="20" r="20" transform="rotate(180 20 20)" fill="white"/>
+                            <path d="M7.60601 18.9393C7.02022 19.5251 7.02022 20.4749 7.60601 21.0607L17.1519 30.6066C17.7377 31.1924 18.6875 31.1924 19.2733 30.6066C19.8591 30.0208 19.8591 29.0711 19.2733 28.4853L10.788 20L19.2733 11.5147C19.8591 10.9289 19.8591 9.97919 19.2733 9.3934C18.6875 8.80761 17.7377 8.80761 17.1519 9.3934L7.60601 18.9393ZM32 18.5L8.66667 18.5L8.66667 21.5L32 21.5L32 18.5Z" fill="#099DBA"/>
+                        </svg>
+                    </div>
+                    <div class="slider__controls_nextBtn">
+                        <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="20" cy="20" r="20" fill="white"/>
+                            <path d="M32.394 21.0607C32.9798 20.4749 32.9798 19.5251 32.394 18.9393L22.8481 9.3934C22.2623 8.80761 21.3125 8.80761 20.7267 9.3934C20.1409 9.97919 20.1409 10.9289 20.7267 11.5147L29.212 20L20.7267 28.4853C20.1409 29.0711 20.1409 30.0208 20.7267 30.6066C21.3125 31.1924 22.2623 31.1924 22.8481 30.6066L32.394 21.0607ZM8 21.5H31.3333V18.5H8V21.5Z" fill="#099DBA"/>
+                        </svg>                            
+                    </div>
+                </div>
+                <ul class="slider__nav">
+                    <li>
+                        <img src="icons/doctors/doctorLogo_1.svg" alt="doctorLogo_1">
+                        <div class="slider__nav_name">Саидов Шамсулло Нарзуллоевич</div>
+                        <div class="slider__nav_speciality">Врач-стоматолог <span>Ведущий специалист</span></div>
+                    </li>
+                    <li>
+                        <img src="icons/doctors/doctorLogo_2.svg" alt="doctorLogo_2">
+                        <div class="slider__nav_name">Анисимов Дмитрий Владимирович</div>
+                        <div class="slider__nav_speciality">Врач-стоматолог</div>
+                    </li>
+                    <li>
+                        <img src="icons/doctors/doctorLogo_3.svg" alt="doctorLogo_3">
+                        <div class="slider__nav_name">Варданян Давид Араевич</div>
+                        <div class="slider__nav_speciality">Врач-стоматолог</div>
+                    </li>
+                    <li>
+                        <img src="icons/doctors/doctorLogo_4.svg" alt="doctorLogo_4">
+                        <div class="slider__nav_name">Соха Анастасия Юрьевна</div>
+                        <div class="slider__nav_speciality">Врач-стоматолог</div>
+                    </li>
+                    <li>
+                        <img src="icons/doctors/doctorLogo_5.svg" alt="doctorLogo_5">
+                        <div class="slider__nav_name">Иванова Оксана Григорьевна</div>
+                        <div class="slider__nav_speciality">Врач-стоматолог</div>
+                    </li>
+                    <li>
+                        <img src="icons/doctors/doctorLogo_6.svg" alt="doctorLogo_6">
+                        <div class="slider__nav_name">Синельщикова Елена Дмитриевна</div>
+                        <div class="slider__nav_speciality">Врач-стоматолог</div>
+                    </li>
+                </ul>
+                <button class="slider__slide_btn btn">Записаться</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="helper">
+        <div class="container">
+            <div class="helper__descr title title_fz36">
+                Выбрав, интересующую вас услугу, <span>наш электронный помощник</span>, поможет вам быстро подобрать нужного специалиста
+            </div>
+            <div class="helper__wrapper">
+                <div class="helper__item">
+                    <div class="helper__item_title">Хирургия</div>
+                    <div class="helper__item_circle">
+                        <img src="img/service/surgery.png" alt="surgery">
+                    </div>
+                </div>
+                <div class="helper__item">
+                    <div class="helper__item_title">Терапия</div>
+                    <div class="helper__item_circle">
+                        <img src="img/service/therapy.png" alt="therapy">
+                    </div>
+                </div>
+                <div class="helper__item">
+                    <div class="helper__item_title">Ортопедия</div>
+                    <div class="helper__item_circle">
+                        <img src="img/service/orthopedics.png" alt="orthopedics">
+                    </div>
+                </div>
+                <div class="helper__item">
+                    <div class="helper__item_title">Имплантация</div>
+                    <div class="helper__item_circle">
+                        <img src="img/service/implantation.png" alt="implantation">
+                    </div>
+                </div>
+                <div class="helper__item">
+                    <div class="helper__item_title">Ортодонтия</div>
+                    <div class="helper__item_circle">
+                        <img src="img/service/orthodontics.png" alt="orthodontics">
+                    </div>
+                </div>
+                <div class="helper__item">
+                    <div class="helper__item_title">Отбеливание</div>
+                    <div class="helper__item_circle">
+                        <img src="img/service/whitening.png" alt="whitening">
                     </div>
                 </div>
             </div>
