Finish section reviews and licenses

--- a/src/index.html
+++ b/src/index.html
@@ -200,19 +200,19 @@
             </div>
             <div class="slider"> 
                 <div class="slider__wrapper">
-                    <div>
+                    <div class="slider__slide">
                         <img src="img/promotions/pregnant.jpg" alt="pregnant">
                     </div>
-                    <div>
+                    <div class="slider__slide">
                         <img src="img/promotions/pregnant.jpg" alt="pregnant">
                     </div>
-                    <div>
+                    <div class="slider__slide">
                         <img src="img/promotions/restoration.jpg" alt="restoration">
                     </div>
-                    <div>
+                    <div class="slider__slide">
                         <img src="img/promotions/delete.jpg" alt="delete">
                     </div>
-                    <div>
+                    <div class="slider__slide">
                         <img src="img/promotions/pregnant.jpg" alt="pregnant">
                     </div>
                 </div> 
@@ -633,6 +633,133 @@
                         <img src="img/service/whitening.png" alt="whitening">
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="reviews">
+        <div class="container">
+            <h2 class="title title_fz42">Отзывы</h2>
+            <div class="reviews__descr title title_fz28">Нашу клинику за годы работы посетили сотни пациентов. Всегда рады видеть довольных клиентов. Ваша улыбка - это наша работа!</div>
+            <div class="slider"> 
+                <div class="slider__wrapper">
+                    <div>
+                        <div class="slider__slide">
+                            <div class="slider__photo">
+                                <img src="img/reviews/reviews_1.jpg" alt="reviews_photo">
+                            </div>
+                            <div class="slider__descr">
+                                <div class="slider__descr_title">Юрьева Оксана</div>
+                                <div class="slider__descr_text">Клиника чистая, уютная. Персонал улыбчивый, вежливый, услужливый. Всегда объяснят если что не понятно несколько раз, с таким персоналом приятно общаться. Мне уделили довольно много времени, всё подробно рассказали и проконсультировали.</div>
+                                <div class="slider__descr_date">12.02.2020</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="slider__slide">
+                            <div class="slider__photo">
+                                <img src="img/reviews/reviews_2.jpg" alt="reviews_photo">
+                            </div>
+                            <div class="slider__descr">
+                                <div class="slider__descr_title">Викина Вика</div>
+                                <div class="slider__descr_text">Хочу сказать огромное СПАСИБО врачам и персоналу Стоматологии Семейный Доктор. Я ваш вечный клиент и главное эксклюзивный. Очень рада что мы познакомились. СПАСИБО!</div>
+                                <div class="slider__descr_date">12.02.2020</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="slider__slide">
+                            <div class="slider__photo">
+                                <img src="img/reviews/reviews_1.jpg" alt="reviews_photo">
+                            </div>
+                            <div class="slider__descr">
+                                <div class="slider__descr_title">Юрьева Оксана</div>
+                                <div class="slider__descr_text">Клиника чистая, уютная. Персонал улыбчивый, вежливый, услужливый. Всегда объяснят если что не понятно несколько раз, с таким персоналом приятно общаться. Мне уделили довольно много времени, всё подробно рассказали и проконсультировали.</div>
+                                <div class="slider__descr_date">12.02.2020</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="slider__slide">
+                            <div class="slider__photo">
+                                <img src="img/reviews/reviews_2.jpg" alt="reviews_photo">
+                            </div>
+                            <div class="slider__descr">
+                                <div class="slider__descr_title">Викина Вика</div>
+                                <div class="slider__descr_text">Хочу сказать огромное СПАСИБО врачам и персоналу Стоматологии Семейный Доктор. Я ваш вечный клиент и главное эксклюзивный. Очень рада что мы познакомились. СПАСИБО!</div>
+                                <div class="slider__descr_date">12.02.2020</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="slider__slide">
+                            <div class="slider__photo">
+                                <img src="img/reviews/reviews_1.jpg" alt="reviews_photo">
+                            </div>
+                            <div class="slider__descr">
+                                <div class="slider__descr_title">Юрьева Оксана</div>
+                                <div class="slider__descr_text">Клиника чистая, уютная. Персонал улыбчивый, вежливый, услужливый. Всегда объяснят если что не понятно несколько раз, с таким персоналом приятно общаться. Мне уделили довольно много времени, всё подробно рассказали и проконсультировали.</div>
+                                <div class="slider__descr_date">12.02.2020</div>
+                            </div>
+                        </div>
+                    </div>
+                </div> 
+                <div class="slider__controls">
+                    <div class="slider__controls_prevBtn">
+                        <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="20" cy="20" r="20" transform="rotate(180 20 20)" fill="white"/>
+                            <path d="M7.60601 18.9393C7.02022 19.5251 7.02022 20.4749 7.60601 21.0607L17.1519 30.6066C17.7377 31.1924 18.6875 31.1924 19.2733 30.6066C19.8591 30.0208 19.8591 29.0711 19.2733 28.4853L10.788 20L19.2733 11.5147C19.8591 10.9289 19.8591 9.97919 19.2733 9.3934C18.6875 8.80761 17.7377 8.80761 17.1519 9.3934L7.60601 18.9393ZM32 18.5L8.66667 18.5L8.66667 21.5L32 21.5L32 18.5Z" fill="#099DBA"/>
+                        </svg>
+                    </div>
+                    <div class="slider__controls_nextBtn">
+                        <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="20" cy="20" r="20" fill="white"/>
+                            <path d="M32.394 21.0607C32.9798 20.4749 32.9798 19.5251 32.394 18.9393L22.8481 9.3934C22.2623 8.80761 21.3125 8.80761 20.7267 9.3934C20.1409 9.97919 20.1409 10.9289 20.7267 11.5147L29.212 20L20.7267 28.4853C20.1409 29.0711 20.1409 30.0208 20.7267 30.6066C21.3125 31.1924 22.2623 31.1924 22.8481 30.6066L32.394 21.0607ZM8 21.5H31.3333V18.5H8V21.5Z" fill="#099DBA"/>
+                        </svg>                            
+                    </div>
+                </div>
+                <ul class="slider__nav"></ul>
+            </div>
+        </div>
+    </div>
+
+    <div class="licenses">
+        <div class="container">
+            <h2 class="title title_fz42">Лицензии и награды</h2>
+            <div class="licenses__descr title title_fz28">Деятельность клиники сертифицирована, мы имеем все необходимые лицензии и разрешающие документы.</div>
+            <div class="slider"> 
+                <div class="slider__wrapper">
+                    <div class="slider__slide">
+                        <img src="img/licenses/licenses_1.jpg" alt="licenses_1">
+                    </div>
+                    <div class="slider__slide">
+                        <img src="img/licenses/licenses_2.jpg" alt="licenses_2">
+                    </div>
+                    <div class="slider__slide">
+                        <img src="img/licenses/licenses_3.jpg" alt="licenses_3">
+                    </div>
+                    <div class="slider__slide">
+                        <img src="img/licenses/licenses_4.jpg" alt="licenses_4">
+                    </div>
+                    <div class="slider__slide">
+                        <img src="img/licenses/licenses_2.jpg" alt="licenses_5">
+                    </div>
+                </div> 
+                <div class="slider__controls">
+                    <div class="slider__controls_prevBtn">
+                        <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="20" cy="20" r="20" transform="rotate(180 20 20)" fill="white"/>
+                            <path d="M7.60601 18.9393C7.02022 19.5251 7.02022 20.4749 7.60601 21.0607L17.1519 30.6066C17.7377 31.1924 18.6875 31.1924 19.2733 30.6066C19.8591 30.0208 19.8591 29.0711 19.2733 28.4853L10.788 20L19.2733 11.5147C19.8591 10.9289 19.8591 9.97919 19.2733 9.3934C18.6875 8.80761 17.7377 8.80761 17.1519 9.3934L7.60601 18.9393ZM32 18.5L8.66667 18.5L8.66667 21.5L32 21.5L32 18.5Z" fill="#099DBA"/>
+                        </svg>
+                    </div>
+                    <div class="slider__controls_nextBtn">
+                        <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="20" cy="20" r="20" fill="white"/>
+                            <path d="M32.394 21.0607C32.9798 20.4749 32.9798 19.5251 32.394 18.9393L22.8481 9.3934C22.2623 8.80761 21.3125 8.80761 20.7267 9.3934C20.1409 9.97919 20.1409 10.9289 20.7267 11.5147L29.212 20L20.7267 28.4853C20.1409 29.0711 20.1409 30.0208 20.7267 30.6066C21.3125 31.1924 22.2623 31.1924 22.8481 30.6066L32.394 21.0607ZM8 21.5H31.3333V18.5H8V21.5Z" fill="#099DBA"/>
+                        </svg>                            
+                    </div>
+                </div>
+                <ul class="slider__nav"></ul>
             </div>
         </div>
     </div>
