Finish section aboutClinic

--- a/src/index.html
+++ b/src/index.html
@@ -154,7 +154,7 @@
             <h2 class="title title_fz42">
                 Бесплатная консультация врача
             </h2>
-            <h3 class="freeConsult__descr title title_fz28">
+            <h3 class="freeConsult__subtitle title title_fz28">
                 На бесплатной консультации врач клиники проведет диагностику всех зубов:
             </h3>
             <div class="freeConsult__wrapper">
@@ -195,7 +195,7 @@
             <h2 class="title title_fz42">
                 Акции
             </h2>
-            <div class="promotions__descr title title_fz28">
+            <div class="promotions__subtitle title title_fz28">
                 Для подписчиков группы VK стоматологической клиники "Семейный доктор" <span>действуют акции и специальные предложения</span>
             </div>
             <div class="slider"> 
@@ -240,7 +240,7 @@
             <h2 class="title title_fz42">
                 Услуги
             </h2>
-            <div class="service__descr title title_fz28">
+            <div class="service__subtitle title title_fz28">
                 Наша клиника предоставляет широкий спектр услуг, выберите подходящую вам и 
                 <span>запишитесь на бесплатную консультацию</span> 
             </div>
@@ -411,7 +411,7 @@
                     <h2 class="hygiene__title title title_fz28">
                         Технология профессиональной гигиены полости рта <span>в 4 этапа</span> 
                     </h2>
-                    <div class="hygiene__descr">
+                    <div class="hygiene__subtitle">
                         Посмотрите видео о технологии
                     </div>
                     <!-- <iframe width="550" height="305" src="https://www.youtube.com/embed/6lbZnBIkQ4Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
@@ -464,7 +464,7 @@
     <div class="doctors">
         <div class="container">
             <h2 class="title title_fz42">Врачи</h2>
-            <div class="doctors__descr title title_fz28">В нашей клинике работают высококлассные специалисты с большим опытом работы. Выберите подходящего врача и запишитесь на  консультацию.</div>
+            <div class="doctors__subtitle title title_fz28">В нашей клинике работают высококлассные специалисты с большим опытом работы. Выберите подходящего врача и запишитесь на  консультацию.</div>
 
             <div class="slider"> 
                 <div class="slider__wrapper">
@@ -593,7 +593,7 @@
 
     <div class="helper">
         <div class="container">
-            <div class="helper__descr title title_fz36">
+            <div class="helper__subtitle title title_fz36">
                 Выбрав, интересующую вас услугу, <span>наш электронный помощник</span>, поможет вам быстро подобрать нужного специалиста
             </div>
             <div class="helper__wrapper">
@@ -640,7 +640,7 @@
     <div class="reviews">
         <div class="container">
             <h2 class="title title_fz42">Отзывы</h2>
-            <div class="reviews__descr title title_fz28">Нашу клинику за годы работы посетили сотни пациентов. Всегда рады видеть довольных клиентов. Ваша улыбка - это наша работа!</div>
+            <div class="reviews__subtitle title title_fz28">Нашу клинику за годы работы посетили сотни пациентов. Всегда рады видеть довольных клиентов. Ваша улыбка - это наша работа!</div>
             <div class="slider"> 
                 <div class="slider__wrapper">
                     <div>
@@ -726,7 +726,7 @@
     <div class="licenses">
         <div class="container">
             <h2 class="title title_fz42">Лицензии и награды</h2>
-            <div class="licenses__descr title title_fz28">Деятельность клиники сертифицирована, мы имеем все необходимые лицензии и разрешающие документы.</div>
+            <div class="licenses__subtitle title title_fz28">Деятельность клиники сертифицирована, мы имеем все необходимые лицензии и разрешающие документы.</div>
             <div class="slider"> 
                 <div class="slider__wrapper">
                     <div class="slider__slide">
@@ -743,6 +743,72 @@
                     </div>
                     <div class="slider__slide">
                         <img src="img/licenses/licenses_2.jpg" alt="licenses_5">
+                    </div>
+                </div> 
+                <div class="slider__controls">
+                    <div class="slider__controls_prevBtn">
+                        <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="20" cy="20" r="20" transform="rotate(180 20 20)" fill="white"/>
+                            <path d="M7.60601 18.9393C7.02022 19.5251 7.02022 20.4749 7.60601 21.0607L17.1519 30.6066C17.7377 31.1924 18.6875 31.1924 19.2733 30.6066C19.8591 30.0208 19.8591 29.0711 19.2733 28.4853L10.788 20L19.2733 11.5147C19.8591 10.9289 19.8591 9.97919 19.2733 9.3934C18.6875 8.80761 17.7377 8.80761 17.1519 9.3934L7.60601 18.9393ZM32 18.5L8.66667 18.5L8.66667 21.5L32 21.5L32 18.5Z" fill="#099DBA"/>
+                        </svg>
+                    </div>
+                    <div class="slider__controls_nextBtn">
+                        <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="20" cy="20" r="20" fill="white"/>
+                            <path d="M32.394 21.0607C32.9798 20.4749 32.9798 19.5251 32.394 18.9393L22.8481 9.3934C22.2623 8.80761 21.3125 8.80761 20.7267 9.3934C20.1409 9.97919 20.1409 10.9289 20.7267 11.5147L29.212 20L20.7267 28.4853C20.1409 29.0711 20.1409 30.0208 20.7267 30.6066C21.3125 31.1924 22.2623 31.1924 22.8481 30.6066L32.394 21.0607ZM8 21.5H31.3333V18.5H8V21.5Z" fill="#099DBA"/>
+                        </svg>                            
+                    </div>
+                </div>
+                <ul class="slider__nav"></ul>
+            </div>
+        </div>
+    </div>
+
+    <div class="aboutClinic">
+        <div class="container">
+            <h2 class="title title_fz42">О клинике</h2>
+            <div class="aboutClinic__subtitle title title_fz28">Вы получите качественное лечение на современном оборудовании по приемлимым ценам</div>
+            <div class="aboutClinic__wrapper">
+                <div>
+                    <div class="aboutClinic__descr">Философия клиники Ваша здоровая улыбка – наша работа.  В стенах нашей стоматологической клиники Вы всегда можете рассчитывать на профессиональное оказание услуг в кратчайшие сроки.</div>
+                    <ul class="aboutClinic__list">
+                        <li class="aboutClinic__list_item">
+                            Современное оборудование, профессионализм врачей, опыт, а главное – внимательное отношение к пациенту.
+                        </li>
+                        <li class="aboutClinic__list_item">
+                            Главное направление – оказание качественной стоматологической помощи (детская стоматология, терапевтическое лечение, хирургическое лечение, имплантология, ортодонтическое лечение, ортопедия).
+                        </li>
+                        <li class="aboutClinic__list_item">
+                            Каждый месяц у нас проходят акции и специальные предложения
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <img class="aboutClinic__img" src="" alt="">
+                </div>
+            </div>
+            <div class="slider"> 
+                <div class="slider__wrapper">
+                    <div class="slider__slide">
+                        <img src="img/aboutClinic/aboutClinic_1.jpg" alt="aboutClinic_1">
+                    </div>
+                    <div class="slider__slide">
+                        <img src="img/aboutClinic/aboutClinic_2.jpg" alt="aboutClinic_2">
+                    </div>
+                    <div class="slider__slide">
+                        <img src="img/aboutClinic/aboutClinic_3.jpg" alt="aboutClinic_3">
+                    </div>
+                    <div class="slider__slide">
+                        <img src="img/aboutClinic/aboutClinic_4.jpg" alt="aboutClinic_4">
+                    </div>
+                    <div class="slider__slide">
+                        <img src="img/aboutClinic/aboutClinic_2.jpg" alt="aboutClinic_2">
+                    </div>
+                    <div class="slider__slide">
+                        <img src="img/aboutClinic/aboutClinic_1.jpg" alt="aboutClinic_1">
+                    </div>
+                    <div class="slider__slide">
+                        <img src="img/aboutClinic/aboutClinic_4.jpg" alt="aboutClinic_4">
                     </div>
                 </div> 
                 <div class="slider__controls">
